# py-gene-fusions

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: checks.yaml  checks.yml  close_issue.yml  github-actions.yml  release.yml
docs/source/: conf.py  contributing.rst  data_model.rst  index.rst  install.rst  usage.rst
docs/source/reference/api/: fusor.rst
examples/: README.md  alk.json  epcam_msh2.json  ewsr1.json  example_1.json  example_gene_fusion_class.json  exhaustive_example.json  fusion_example.json  minimal_example.json  tpm3_ntrk1.json  tpm3_pdgfrb.json
fusion/: model.py
fusor/: __init__.py  examples.py  fusor.py  model.py  models.py  nomenclature.py  tools.py  translator.py  version.py
fusor/examples/: README.md  __init__.py  bcr_abl1.json  bcr_abl1_expanded.json  igh_myc.json  tpm3_pdgfrb.json
src/fusor/: __init__.py  extract.py  fusion_caller_models.py  fusor.py  harvester.py  models.py  nomenclature.py  tools.py  translator.py  version.py
src/fusor/examples/: README.md  alk.json  bcr_abl1.json  bcr_abl1_expanded.json  create_examples.py  ewsr1.json  ewsr1_elements_only.json  ewsr1_no_assay.json  ewsr1_no_causative_event.json  igh_myc.json  tpm3_ntrk1.json  tpm3_pdgfrb.json
tests/: conftest.py  test_extractions.py  test_fusion_caller_models.py  test_fusor.py  test_harvesters.py  test_model.py  test_models.py  test_nomenclature.py  test_tools.py  test_translators.py
tests/data/dynamodb_local_latest/: dynamodb_build.bash  shared-local-instance.db
tests/data/seqrepo/latest/: aliases.sqlite3
tests/data/seqrepo/latest/sequences/: db.sqlite3
unit_tests/: test_class.py
