[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "E", "F", "I", "BLE", "Q", "ANN"
]
ignore = ["D205", "D400", "ANN101", "ANN003"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN001", "ANN2"]
"fusor/models.py" = ["ANN001", "ANN201", "ANN205"]
