[metadata]
name = py-gene-fusions
description = Package for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
license = MIT

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    pydantic
tests_require =
    pytest
    pytest-cov

[tool:pytest]
addopts = --ignore setup.py --doctest-modules --cov-report term-missing --cov .