[metadata]
name = fusor
description = Provide computable object representation and validation for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
home_page = https://github.com/cancervariants/fusor
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    pydantic
    ga4gh.vrsatile.pydantic >=0.0.5
    ga4gh.vrs[extras] >=0.7.2
    jsonschema >=2.3, <4.0
    biocommons.seqrepo
    gene-normalizer >=0.1.23
    uta-tools >=0.0.10

tests_require =
    pytest
    pytest-cov

[tool:pytest]
addopts = --ignore setup.py --doctest-modules --cov-report term-missing --disable-warnings --cov .
