[metadata]
name = fusor
description = Provide computable object representation and validation for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
home_page = https://github.com/cancervariants/fusor
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    pydantic
    ga4gh.vrsatile.pydantic ~=0.0.11
    ga4gh.vrs ~=0.8.1
    biocommons.seqrepo
    gene-normalizer ~=0.1.35
    cool-seq-tool ~=0.1.13

tests_require =
    pytest
    pytest-cov
    pytest-asyncio

[options.package_data]
fusor =
    examples/*

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio

dev =
    pre-commit
    ruff ==0.0.275

[tool:pytest]
addopts = --ignore setup.py --ignore tests/ --cov-report term-missing --disable-warnings --cov-config=.coveragerc --cov=fusor
